--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-extensions/elements": "^8.6.0",
     "@angular/animations": "~8.2.5",
     "@angular/common": "~8.2.5",
     "@angular/compiler": "~8.2.5",
     "@angular/core": "~8.2.5",
+    "@angular/elements": "^8.2.6",
     "@angular/forms": "~8.2.5",
     "@angular/platform-browser": "~8.2.5",
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
+    "@webcomponents/custom-elements": "^1.2.4",
+    "add": "^2.0.6",
+    "document-register-element": "^1.7.2",
+    "ng": "0.0.0",
+    "ngx-build-plus": "^8.1.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
